--- a/marketplace/build.gradle
+++ b/marketplace/build.gradle
@@ -1,6 +1,9 @@
 plugins {
     id 'com.android.library'
     id 'org.jetbrains.kotlin.android'
+    id 'kotlin-android'
+    id 'kotlin-kapt'
+    id 'kotlin-parcelize'
 }
 
 android {
@@ -27,14 +30,71 @@ android {
     kotlinOptions {
         jvmTarget = '1.8'
     }
+
+    buildFeatures {
+        viewBinding true
+    }
 }
 
 dependencies {
 
-    implementation 'androidx.core:core-ktx:1.7.0'
+//    testImplementation 'junit:junit:4.13.2'
+//    androidTestImplementation 'androidx.test.ext:junit:1.1.3'
+//    androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+
+    implementation 'androidx.core:core-ktx:1.8.0'
     implementation 'androidx.appcompat:appcompat:1.4.2'
     implementation 'com.google.android.material:material:1.6.1'
-    testImplementation 'junit:junit:4.13.2'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.3'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+    implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
+    implementation 'androidx.annotation:annotation:1.4.0'
+    implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.4.1'
+    implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.4.1'
+
+    //services
+    def retrofit_version = '2.9.0'
+    api "com.squareup.retrofit2:retrofit:$retrofit_version"
+    api "com.squareup.retrofit2:converter-gson:$retrofit_version"
+    api "com.squareup.retrofit2:converter-scalars:$retrofit_version"//return string
+    api 'com.google.code.gson:gson:2.9.0'
+    // define a BOM and its version
+    api(platform("com.squareup.okhttp3:okhttp-bom:4.10.0"))
+    api("com.squareup.okhttp3:okhttp")
+    api("com.squareup.okhttp3:logging-interceptor")
+
+    //loading
+    api 'cc.cloudist.acplibrary:library:1.2.1'
+
+    //select image https://github.com/Dhaval2404/ImagePicker
+    api 'com.github.dhaval2404:imagepicker-support:1.7.1'
+
+    //glide
+    api 'com.github.bumptech.glide:glide:4.13.2'
+    kapt 'com.github.bumptech.glide:compiler:4.13.2'
+    api 'jp.wasabeef:glide-transformations:4.3.0'
+
+//    api 'com.permissionx.guolindev:permissionx:1.4.0'
+
+    // coroutine
+    def coroutine = '1.6.1'
+    api "org.jetbrains.kotlinx:kotlinx-coroutines-android:$coroutine"
+    api "org.jetbrains.kotlinx:kotlinx-coroutines-core:$coroutine"
+
+    //viewModel
+    api "android.arch.lifecycle:extensions:1.1.1"
+
+    //base adapter
+    api 'androidx.recyclerview:recyclerview:1.2.1'
+    api 'androidx.fragment:fragment-ktx:1.4.1'
+
+    //Permission
+    api 'com.vmadalin:easypermissions-ktx:1.0.0'
+
+    //select image/video/file
+    api 'com.github.jkwiecien:EasyImage:3.2.0'
+
+    //posting xu ly phia app topce/rtek
+    /*implementation 'com.amitshekhar.android:jackson-android-networking:1.0.2'
+    implementation 'com.microsoft.azure.android:azure-storage-android:2.0.0@aar'
+    implementation 'com.github.hkk595:Resizer:v1.5'*/
+
 }
