--- a/marketplace/src/main/AndroidManifest.xml
+++ b/marketplace/src/main/AndroidManifest.xml
@@ -2,4 +2,17 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.ehubstar.marketplace">
 
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+
+    <!--<application>
+        <activity
+            android:name=".activities.MarketPostActivity"
+            android:exported="false"
+             />
+        <activity
+            android:name=".retrofitkt.MovieActivity"
+            android:exported="true" />
+    </application>-->
+
 </manifest>
